# dobby-sdk

./: .env.example  .gitignore  README.md  pyproject.toml
dobby/: __init__.py  executor.py
dobby/common_tools/: __init__.py  tavily.py
dobby/providers/: __init__.py  _retry.py  base.py  openai.py
dobby/providers/anthropic/: __init__.py  adapter.py  converters.py
dobby/providers/gemini/: adapter.py
dobby/providers/openai/: __init__.py  adapter.py  completions.py  provider.py
dobby/retriever/: hybrid_retriever.py
dobby/tools/: __init__.py  decorator.py  injected.py  schema_utils.py  tool.py
dobby/types/: __init__.py  document_part.py  image_part.py  message.py  reasoning_part.py  stream_events.py  text_part.py  tool_events.py  tool_part.py
dobby/vector_store/: __init__.py
docs/tools/: creating-tools.md
docs/types/: messages.md
examples/: anthropic_example.py  injected_context_example.py  parallel_tools_example.py  web_search_agent.py
tests/: eval_claim_accuracy.py  test_anthropic_provider.py  test_anthropic_provider_extended.py  test_live_anthropic.py  test_model_comparison.py  test_openai_provider.py  test_parallel_tools.py  test_provider_errors.py
tests/fixtures/: generate_claim_pdfs.py
